--- a/public/style.css
+++ b/public/style.css
@@ -64,6 +64,7 @@ button
 .ul-container
 {
     flex: 0.25;
+    height: 350px;
     padding: 20px;
     margin: 5px;
     border: 2px solid #6a8ffc;
